added profile photo

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="py-22.5">
           <aside class="p-10 rounded-3xl bg-dark-1 shadow-aside sticky top-8" id="aside">
             <div class="">
-              <img class="aspect-square w-full" src="" alt="">
+              <img class="aspect-square w-full" src="/images/profile.png" alt="">
             </div>
             <div class="text-center">
               <a class="text-grey text-2xl" href="mailto:ayushbajracharya02@gmail.com">ayushbajracharya02@gmail.com</a>
