--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 
 <body class="text-white font-rajdhani bg-black">
-  <header class="fixed right-8 top-1/2 -translate-y-1/2 z-1">
+  <header class="fixed right-8 top-1/2 -translate-y-1/2 z-1 max-lg:hidden">
     <nav class="bg-dark-1/50 backdrop-blur-0.5xs rounded-full shadow-aside-social p-2">
       <ul class="flex flex-col gap-2">
         <li>
@@ -68,16 +68,77 @@
       </ul>
     </nav>
   </header>
+  <div class="fixed right-6 top-6 z-1 lg:hidden" id="mobile-menu-btn">
+    <button class="leading-0 bg-white text-dark-1 rounded-full p-3">
+      <iconify-icon icon="line-md:grid-3" width="20" height="20"></iconify-icon>
+    </button>
+  </div>
+  <dialog
+    class="fixed top-0 left-auto right-0 h-screen bg-dark-4 z-1 text-white w-full max-w-80 backdrop:bg-dark-5/50 starting:translate-x-full transition-transform duration-500 [.closing]:translate-x-full backdrop:starting:opacity-0 backdrop:transition-opacity backdrop:duration-500 [.closing]:backdrop:opacity-0"
+    id="mobile-menu">
+    <div class="h-full">
+      <div class="pt-12.5 px-10 pb-10">
+        <div class="flex justify-between items-end">
+          <h2 class="text-lg">Menu</h2>
+          <button id="mobile-menu-close-btn">
+            <iconify-icon icon="system-uicons:cross" width="24" height="24"></iconify-icon>
+          </button>
+        </div>
+        <nav class="mt-13">
+          <ul class="space-y-8">
+            <li>
+              <a class="flex gap-3" href="#home">
+                <iconify-icon icon="line-md:home" width="20" height="20"></iconify-icon>
+                <span>Home</span>
+              </a>
+            </li>
+            <li>
+              <a class="flex gap-3" href="#about">
+                <iconify-icon icon="icon-park-outline:user" width="20" height="20"></iconify-icon>
+                <span>About</span>
+              </a>
+            </li>
+            <li>
+              <a class="flex gap-3" href="#resume">
+                <iconify-icon icon="qlementine-icons:resume-16" width="20" height="20"></iconify-icon>
+                <span>Resume</span>
+              </a>
+            </li>
+            <li>
+              <a class="flex gap-3" href="#skills">
+                <iconify-icon icon="et:tools" width="20" height="20"></iconify-icon>
+                <span>Skills</span>
+              </a>
+            </li>
+            <li>
+              <a class="flex gap-3" href="#portfolio">
+                <iconify-icon icon="dashicons:portfolio" width="20" height="20"></iconify-icon>
+                <span>Portfolio</span>
+              </a>
+            </li>
+            <li>
+              <a class="flex gap-3" href="#contact">
+                <iconify-icon icon="ph:handshake" width="20" height="20"></iconify-icon>
+                <span>Get In Touch</span>
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </dialog>
   <div class="" id="smooth-wrapper">
     <div class="container" id="smooth-content">
-      <div class="grid grid-cols-[450px_1fr]">
-        <div class="py-22.5">
+      <div
+        class="grid gap-x-20 max-xl:grid-rows-[auto_auto] max-xl:grid-cols-[minmax(0,768px)] max-2xl:grid-cols-[400px_1fr] grid-cols-[450px_1fr] justify-center">
+        <div class="max-xl:py-16 py-22.5">
           <aside class="p-10 rounded-3xl bg-dark-1 shadow-aside sticky top-8" id="aside">
-            <div class="">
+            <div class="rounded-2xl overflow-hidden max-xl:max-w-80 mx-auto">
               <img class="aspect-square w-full" src="/images/profile.png" alt="">
             </div>
-            <div class="text-center">
-              <a class="text-grey text-2xl" href="mailto:ayushbajracharya02@gmail.com">ayushbajracharya02@gmail.com</a>
+            <div class="mt-16 text-center">
+              <a class="text-grey max-sm:text-xl text-2xl"
+                href="mailto:ayushbajracharya02@gmail.com">ayushbajracharya02@gmail.com</a>
             </div>
             <div class="text-center mt-3">
               <address>Kumaripati, Lalitpur</address>
@@ -111,8 +172,8 @@
             </div>
           </aside>
         </div>
-        <main class="max-w-3xl mx-auto w-full">
-          <section class="py-22.5" id="home">
+        <main class="max-xl:max-w-[unset] max-2xl:max-w-2xl max-w-3xl mx-auto w-full">
+          <section class="max-xl:py-16 py-22.5" id="home">
             <div class="">
               <h2 class="text-lg">Introduction</h2>
             </div>
@@ -140,7 +201,7 @@
               </div>
             </div>
           </section>
-          <section class="py-22.5" id="about">
+          <section class="max-xl:py-16 py-22.5" id="about">
             <div class="">
               <h2 class="text-lg">
                 About Me
@@ -160,7 +221,7 @@
               </p>
             </div>
           </section>
-          <section class="py-22.5" id="resume">
+          <section class="max-xl:py-16 py-22.5" id="resume">
             <div class="">
               <h2 class="text-lg">
                 Resume
@@ -178,9 +239,10 @@
                     <div class="mb-0.5">
                       <p class="text-light-1/50 text-xl">Capital Eye Nepal</p>
                     </div>
-                    <div class="flex group-hover:text-primary transition-colors duration-500 justify-between items-end">
+                    <div
+                      class="flex group-hover:text-primary transition-colors duration-500 justify-between items-end gap-2">
                       <span class="text-2xl">Frontend Developer</span>
-                      <span class="bg-dark-3/50 rounded-full py-1.5 px-6">
+                      <span class="bg-dark-3/50 rounded-full py-1.5 px-6 shrink-0">
                         2023 - Present
                       </span>
                     </div>
@@ -191,9 +253,10 @@
                     <div class="mb-0.5">
                       <p class="text-light-1/50 text-xl">St. Xavier's College</p>
                     </div>
-                    <div class="flex group-hover:text-primary transition-colors duration-500 justify-between items-end">
+                    <div
+                      class="flex group-hover:text-primary transition-colors duration-500 justify-between items-end gap-2">
                       <span class="text-2xl">Bachelor of Information Technology</span>
-                      <span class="bg-dark-3/50 rounded-full py-1.5 px-6">
+                      <span class="bg-dark-3/50 rounded-full py-1.5 px-6 shrink-0">
                         2019 - 2024
                       </span>
                     </div>
@@ -202,7 +265,7 @@
               </ol>
             </div>
           </section>
-          <section class="py-22.5" id="skills">
+          <section class="max-xl:py-16 py-22.5" id="skills">
             <div class="">
               <h2 class="text-lg">
                 Skills
@@ -214,7 +277,7 @@
               </p>
             </div>
             <div class="mt-5">
-              <div class="grid grid-cols-4 gap-6">
+              <div class="grid max-md:grid-cols-[repeat(auto-fill,minmax(0,150px))] justify-center grid-cols-4 gap-6">
                 <div class="">
                   <div class="py-13.5 border-dark-2/50 border-2 rounded-full">
                     <div class="text-center">
@@ -298,7 +361,7 @@
                     </div>
                     <div class="mt-7.5">
                       <p class="text-3xl text-center">
-                        TailwindCSS
+                        Tailwind
                       </p>
                     </div>
                   </div>
@@ -354,7 +417,7 @@
               </div>
             </div>
           </section>
-          <section class="py-22.5" id="portfolio">
+          <section class="max-xl:py-16 py-22.5" id="portfolio">
             <div class="">
               <h2 class="text-lg">
                 Portfolio
@@ -499,7 +562,7 @@
               </ul>
             </div>
           </section>
-          <section class="py-22.5" id="contact">
+          <section class="max-xl:py-16 py-22.5" id="contact">
             <div class="p-10 rounded-3xl bg-dark-1 shadow-aside">
               <div class="">
                 <p class="text-6.5xl font-medium">
