--- a/index.html
+++ b/index.html
@@ -77,53 +77,82 @@
     class="fixed top-0 left-auto right-0 h-screen bg-dark-4 z-1 text-white w-full max-w-80 backdrop:bg-dark-5/50 starting:translate-x-full transition-transform duration-500 [.closing]:translate-x-full backdrop:starting:opacity-0 backdrop:transition-opacity backdrop:duration-500 [.closing]:backdrop:opacity-0"
     id="mobile-menu">
     <div class="h-full">
-      <div class="pt-12.5 px-10 pb-10">
-        <div class="flex justify-between items-end">
-          <h2 class="text-lg">Menu</h2>
-          <button id="mobile-menu-close-btn">
-            <iconify-icon icon="system-uicons:cross" width="24" height="24"></iconify-icon>
-          </button>
+      <div class="h-full pt-12.5 px-10 pb-10 flex flex-col justify-between">
+        <div class="">
+          <div class="flex justify-between items-end">
+            <h2 class="text-lg">Menu</h2>
+            <button id="mobile-menu-close-btn">
+              <iconify-icon icon="system-uicons:cross" width="24" height="24"></iconify-icon>
+            </button>
+          </div>
+          <nav class="mt-13">
+            <ul class="space-y-8">
+              <li>
+                <a class="flex gap-3" href="#home">
+                  <iconify-icon icon="line-md:home" width="20" height="20"></iconify-icon>
+                  <span>Home</span>
+                </a>
+              </li>
+              <li>
+                <a class="flex gap-3" href="#about">
+                  <iconify-icon icon="icon-park-outline:user" width="20" height="20"></iconify-icon>
+                  <span>About</span>
+                </a>
+              </li>
+              <li>
+                <a class="flex gap-3" href="#resume">
+                  <iconify-icon icon="qlementine-icons:resume-16" width="20" height="20"></iconify-icon>
+                  <span>Resume</span>
+                </a>
+              </li>
+              <li>
+                <a class="flex gap-3" href="#skills">
+                  <iconify-icon icon="et:tools" width="20" height="20"></iconify-icon>
+                  <span>Skills</span>
+                </a>
+              </li>
+              <li>
+                <a class="flex gap-3" href="#portfolio">
+                  <iconify-icon icon="dashicons:portfolio" width="20" height="20"></iconify-icon>
+                  <span>Portfolio</span>
+                </a>
+              </li>
+              <li>
+                <a class="flex gap-3" href="#contact">
+                  <iconify-icon icon="ph:handshake" width="20" height="20"></iconify-icon>
+                  <span>Get In Touch</span>
+                </a>
+              </li>
+            </ul>
+          </nav>
         </div>
-        <nav class="mt-13">
-          <ul class="space-y-8">
-            <li>
-              <a class="flex gap-3" href="#home">
-                <iconify-icon icon="line-md:home" width="20" height="20"></iconify-icon>
-                <span>Home</span>
-              </a>
-            </li>
-            <li>
-              <a class="flex gap-3" href="#about">
-                <iconify-icon icon="icon-park-outline:user" width="20" height="20"></iconify-icon>
-                <span>About</span>
-              </a>
-            </li>
-            <li>
-              <a class="flex gap-3" href="#resume">
-                <iconify-icon icon="qlementine-icons:resume-16" width="20" height="20"></iconify-icon>
-                <span>Resume</span>
-              </a>
-            </li>
-            <li>
-              <a class="flex gap-3" href="#skills">
-                <iconify-icon icon="et:tools" width="20" height="20"></iconify-icon>
-                <span>Skills</span>
-              </a>
-            </li>
-            <li>
-              <a class="flex gap-3" href="#portfolio">
-                <iconify-icon icon="dashicons:portfolio" width="20" height="20"></iconify-icon>
-                <span>Portfolio</span>
-              </a>
-            </li>
-            <li>
-              <a class="flex gap-3" href="#contact">
-                <iconify-icon icon="ph:handshake" width="20" height="20"></iconify-icon>
-                <span>Get In Touch</span>
-              </a>
-            </li>
-          </ul>
-        </nav>
+        <div class="">
+          <div class="">
+            <h2 class="text-lg">My Socials</h2>
+          </div>
+          <div class="flex mt-7 gap-2">
+            <a title="Gitlab" aria-label="Gitlab" href=""
+              class="w-10 aspect-square grid place-items-center bg-white/10 hover:bg-white hover:text-dark-1 transition-colors duration-500 rounded-full shadow-aside-social backdrop-blur-0.5xs">
+              <iconify-icon icon="ph:gitlab-logo-simple-bold" width="18" height="18"></iconify-icon>
+            </a>
+            <a title="Github" aria-label="Github" href=""
+              class="w-10 aspect-square grid place-items-center bg-white/10 hover:bg-white hover:text-dark-1 transition-colors duration-500 rounded-full shadow-aside-social backdrop-blur-0.5xs">
+              <iconify-icon icon="line-md:github" width="18" height="18"></iconify-icon>
+            </a>
+            <a title="Linkedin" aria-label="Linkedin" href=""
+              class="w-10 aspect-square grid place-items-center bg-white/10 hover:bg-white hover:text-dark-1 transition-colors duration-500 rounded-full shadow-aside-social backdrop-blur-0.5xs">
+              <iconify-icon icon="line-md:linkedin" width="18" height="18"></iconify-icon>
+            </a>
+            <a title="Instagram" aria-label="Instagram" href=""
+              class="w-10 aspect-square grid place-items-center bg-white/10 hover:bg-white hover:text-dark-1 transition-colors duration-500 rounded-full shadow-aside-social backdrop-blur-0.5xs">
+              <iconify-icon icon="line-md:instagram" width="18" height="18"></iconify-icon>
+            </a>
+            <a title="Facebook" aria-label="Facebook" href=""
+              class="w-10 aspect-square grid place-items-center bg-white/10 hover:bg-white hover:text-dark-1 transition-colors duration-500 rounded-full shadow-aside-social backdrop-blur-0.5xs">
+              <iconify-icon icon="line-md:facebook" width="18" height="18"></iconify-icon>
+            </a>
+          </div>
+        </div>
       </div>
     </div>
   </dialog>
@@ -237,11 +266,11 @@
                 <li class="pt-4.5 pb-6">
                   <div class="group">
                     <div class="mb-0.5">
-                      <p class="text-light-1/50 text-xl">Capital Eye Nepal</p>
+                      <p class="text-light-1/50 max-sm:text-lg text-xl">Capital Eye Nepal</p>
                     </div>
                     <div
                       class="flex group-hover:text-primary transition-colors duration-500 justify-between items-end gap-2">
-                      <span class="text-2xl">Frontend Developer</span>
+                      <span class="max-sm:text-xl text-2xl">Frontend Developer</span>
                       <span class="bg-dark-3/50 rounded-full py-1.5 px-6 shrink-0">
                         2023 - Present
                       </span>
@@ -251,11 +280,11 @@
                 <li class="pt-4.5 pb-6">
                   <div class="group">
                     <div class="mb-0.5">
-                      <p class="text-light-1/50 text-xl">St. Xavier's College</p>
+                      <p class="text-light-1/50 max-sm:text-lg text-xl">St. Xavier's College</p>
                     </div>
                     <div
                       class="flex group-hover:text-primary transition-colors duration-500 justify-between items-end gap-2">
-                      <span class="text-2xl">Bachelor of Information Technology</span>
+                      <span class="max-sm:text-xl text-2xl">Bachelor of Information Technology</span>
                       <span class="bg-dark-3/50 rounded-full py-1.5 px-6 shrink-0">
                         2019 - 2024
                       </span>
@@ -596,7 +625,7 @@
                         placeholder="Enter a message."></textarea>
                       <em class="form-error mt-1">Email Address is required.</em>
                     </div>
-                    <div class="grid grid-cols-2">
+                    <div class="grid max-sm:grid-cols-1 grid-cols-2">
                       <button class="btn btn-white rounded-full">
                         <span>
                           Send Message
